Actualizacion; Registro de Tipo de habitacion
Se agregan las funciones necesarias para el registro de tipos de habitaciones para una empresa.

--- a/codigo/GestionHotelera/Views/EmpresaHospedaje/Menu.cshtml
+++ b/codigo/GestionHotelera/Views/EmpresaHospedaje/Menu.cshtml
@@ -3,6 +3,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+@model GestionHotelera.Models.VistasModel.EmpresaHospedaje1ViewModel;
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+
 <div style="background-color: white; font-family: 'Segoe UI', sans-serif; padding: 20px; max-width: 1200px; margin: auto; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.1);">
 
     <!-- Botón de retroceso -->
@@ -11,7 +14,7 @@
     </div>
 
     <header style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 30px;">
-        <h1 style="color: #2c3e50; font-size: 28px;">Hotel Paraíso Caribeño <span style="color: #27ae60; font-size: 20px;">RESORT</span></h1>
+        <h1 style="color: #2c3e50; font-size: 28px;">@Model.DatosEmpresa.NombreHotel <span style="color: #27ae60; font-size: 20px;">@Model.DatosEmpresa.NombreTipoHotel</span></h1>
         <a href="/EmpresaHospedaje/VerFacturaciones" style="background-color: #333; color: white; padding: 10px 20px; border-radius: 6px; text-decoration: none;">Ver facturaciones</a>
     </header>
 
@@ -22,26 +25,85 @@
         <a href="/EmpresaHospedaje/EliminarPerfil" style="background-color: #e74c3c; color: white; padding: 10px 15px; border-radius: 5px; text-decoration: none;">Eliminar perfil</a>
     </section>
 
+
+
+    @* Seccion para los datos de comunicacion con la empresa *@
     <section style="display: flex; justify-content: space-between; margin-bottom: 30px;">
         <div style="width: 48%;">
-            <div style="background-color: #f4f4f4; padding: 10px; border-radius: 5px; margin-bottom: 10px;"><strong>Email:</strong> info@paraisocaribe.com</div>
-            <div style="background-color: #f4f4f4; padding: 10px; border-radius: 5px; margin-bottom: 10px;"><strong>Web:</strong> www.paraisocaribe.com</div>
-            <div style="background-color: #f4f4f4; padding: 10px; border-radius: 5px;"><strong>Tel:</strong> +506 2798-0101</div>
+            <div style="background-color: #f4f4f4; padding: 10px; border-radius: 5px; margin-bottom: 10px;"><strong>Email:</strong> @Model.DatosEmpresa.CorreoElectronico</div>
+            
+            @* Verificar que si haya un sitio web.*@
+            @if(!string.IsNullOrEmpty(Model.DatosEmpresa.SitioWeb))
+            {
+                <div style="background-color: #f4f4f4; padding: 10px; border-radius: 5px; margin-bottom: 10px;"><strong>Web:</strong>@Model.DatosEmpresa.SitioWeb</div>
+
+			}
+
+            @* Mostrar todos los telefonos de la empresa. *@
+            @foreach (var telefono in Model.DatosEmpresa.Telefonos)
+            {
+                <div style="background-color: #f4f4f4; padding: 10px; border-radius: 5px; margin-bottom: 10px;"><strong>Tel:</strong> +506 @telefono.NumeroTelefonico</div>
+			}
+
+            @* Esto seria un for para mostrar todos los telefonos*@
+            @* <div style="background-color: #f4f4f4; padding: 10px; border-radius: 5px;"><strong>Tel:</strong> +506 @Model.DatosEmpresa.Telefonos</div> *@
+       
+        
         </div>
+
         <div style="width: 48%;">
-            <div style="background-color: #f4f4f4; padding: 10px; border-radius: 5px; margin-bottom: 10px;"><strong>GPS:</strong> 12.2451° N, 98.0821° W</div>
-            <div style="background-color: #f4f4f4; padding: 10px; border-radius: 5px; margin-bottom: 10px;"><strong>Provincia:</strong> Limón, Limón, Limón</div>
-            <div style="background-color: #f4f4f4; padding: 10px; border-radius: 5px;"><strong>Barrio:</strong> Playa Hermosa</div>
+            @* <div style="background-color: #f4f4f4; padding: 10px; border-radius: 5px; margin-bottom: 10px;"><strong>GPS:</strong> 12.2451° N, 98.0821° W</div> *@
+            <div style="background-color: #f4f4f4; padding: 10px; border-radius: 5px; margin-bottom: 10px;"><strong>Provincia:</strong> @Model.DatosEmpresa.NombreProvincia </div>
+            <div style="background-color: #f4f4f4; padding: 10px; border-radius: 5px; margin-bottom: 10px;"><strong>Canton:</strong> @Model.DatosEmpresa.NombreCanton </div>
+            <div style="background-color: #f4f4f4; padding: 10px; border-radius: 5px; margin-bottom: 10px;"><strong>Distrito:</strong> @Model.DatosEmpresa.NombreDistrito </div>
+            <div style="background-color: #f4f4f4; padding: 10px; border-radius: 5px; margin-bottom: 10px;"><strong>Barrio:</strong> @Model.DatosEmpresa.Barrio</div>
+            <div style="background-color: #f4f4f4; padding: 10px; border-radius: 5px; margin-bottom: 10px;"><strong>Señas exactas:</strong> @Model.DatosEmpresa.SenasExactas </div>
+
         </div>
     </section>
+
+    @* Estos seria para ostrar el mapa *@
+    <section style="margin-bottom: 30px;">
+        <h3 style="color: #2c3e50;">Ubicacion GPS</h3>
+
+        <div id="map" style="height: 400px; margin-bottom: 1rem; border: 10px;"></div>
+
+
+    </section>
+
+
+    @* Seccion para las redes sociales. *@
+    <section style="margin-bottom: 30px;">
+        <h3 style="color: #2c3e50;">Redes sociales:</h3>
+        <div style="display: flex; gap: 10px; flex-wrap: wrap;">
+
+            @* Mostrar con un for las comodidades del hotel. *@
+            @foreach (var redes in Model.DatosEmpresa.RedesSociales)
+            {
+                <div style="background-color: #f4f4f4; padding: 10px; border-radius: 5px; margin-bottom: 10px;"><strong>@redes.NombreRedSocial: </strong>@redes.Enlace</div>
+
+            }
+
+            @* <span style="background-color: #1abc9c; color: white; padding: 5px 10px; border-radius: 5px;">Piscina</span>
+            <span style="background-color: #1abc9c; color: white; padding: 5px 10px; border-radius: 5px;">A/C</span>
+            <span style="background-color: #1abc9c; color: white; padding: 5px 10px; border-radius: 5px;">Parqueo</span> *@
+        </div>
+    </section>
+
 
     <section style="margin-bottom: 30px;">
         <h3 style="color: #2c3e50;">Comodidades</h3>
         <div style="display: flex; gap: 10px; flex-wrap: wrap;">
-            <span style="background-color: #1abc9c; color: white; padding: 5px 10px; border-radius: 5px;">WIFI</span>
-            <span style="background-color: #1abc9c; color: white; padding: 5px 10px; border-radius: 5px;">Piscina</span>
+
+            @* Mostrar con un for las comodidades del hotel. *@
+            @foreach (var servicios in Model.DatosEmpresa.Servicios)
+            {
+                <span style="background-color: #1abc9c; color: white; padding: 5px 10px; border-radius: 5px;">@servicios.NombreServicio</span>
+            }
+
+            @* <span style="background-color: #1abc9c; color: white; padding: 5px 10px; border-radius: 5px;">Piscina</span>
             <span style="background-color: #1abc9c; color: white; padding: 5px 10px; border-radius: 5px;">A/C</span>
-            <span style="background-color: #1abc9c; color: white; padding: 5px 10px; border-radius: 5px;">Parqueo</span>
+            <span style="background-color: #1abc9c; color: white; padding: 5px 10px; border-radius: 5px;">Parqueo</span> *@
         </div>
     </section>
 
@@ -75,5 +137,17 @@
                 <p style="text-align: center;">Habitación Doble</p>
             </div>
         </div>
-    </section>
+	</section>
 </div>
+
+
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+
+
+<script>
+    window.latitudEmpresa = @Model.DatosEmpresa.Latitud.ToString(System.Globalization.CultureInfo.InvariantCulture);
+    window.longitudEmpresa = @Model.DatosEmpresa.Longitud.ToString(System.Globalization.CultureInfo.InvariantCulture);
+</script>
+
+<script src="~/js/MenuEmpresaHospedajeScript.js"></script>
+
