--- a/codigo/GestionHotelera/Views/Cuenta/RegisterHospedaje.cshtml
+++ b/codigo/GestionHotelera/Views/Cuenta/RegisterHospedaje.cshtml
@@ -97,7 +97,7 @@
         <div class="form-group">
             <label for="alojamiento">Tipo de alojamiento: </label>
             <select id="alojamiento" name="Instalacion">
-                <option value="0">Seleccione una provincia</option>
+                <option value="0" disabled selected>Seleccione Un tipo de instalacion:</option>
                 @foreach (var tipo in Model.ListaTiposInstalaciones)
                 {
                     <option value="@tipo.IdTipoInstalacion">@tipo.NombreInstalacion</option>
@@ -110,7 +110,7 @@
         <div class="form-group">
             <label for="provincia">Provincia</label>
             <select id="provincia" name="Provincia">
-                 <option value="0">Seleccione una provincia</option> 
+                <option value="0" disabled selected>Seleccione una provincia</option>
                 @foreach (var provincia in Model.Provincias)
                 {
                     <option value="@provincia.IdProvincia">@provincia.NombreProvincia</option>
@@ -121,14 +121,14 @@
         <div class="form-group">
             <label for="canton">Cantón</label>
             <select id="canton" name="Canton">
-                 <option value="0">Seleccione un cantón</option> 
+                <option value="0" disabled selected>Seleccione un cantón</option>
             </select>
         </div>
 
         <div class="form-group">
             <label for="distrito">Distrito</label>
             <select id="distrito" name="Distrito">
-                <option value="0">Seleccione un distrito</option> 
+                <option value="0" disabled selected>Seleccione un distrito</option>
             </select>
         </div>
 
