--- a/codigo/GestionHotelera/Views/Cuenta/RegisterHospedaje.cshtml
+++ b/codigo/GestionHotelera/Views/Cuenta/RegisterHospedaje.cshtml
@@ -109,7 +109,7 @@
         @* Para la parte de ubicaciones. *@
         <div class="form-group">
             <label for="provincia">Provincia</label>
-            <select id="provincia" name="Provincia">
+            <select id="provincia" name="Provincia" required>
                 <option value="0" disabled selected>Seleccione una provincia</option>
                 @foreach (var provincia in Model.Provincias)
                 {
@@ -120,14 +120,14 @@
 
         <div class="form-group">
             <label for="canton">Cantón</label>
-            <select id="canton" name="Canton">
+            <select id="canton" name="Canton" required>
                 <option value="0" disabled selected>Seleccione un cantón</option>
             </select>
         </div>
 
         <div class="form-group">
             <label for="distrito">Distrito</label>
-            <select id="distrito" name="Distrito">
+            <select id="distrito" name="Distrito" required>
                 <option value="0" disabled selected>Seleccione un distrito</option>
             </select>
         </div>
