--- a/codigo/GestionHotelera/Views/EmpresaHospedaje/AñadirTipoHabitacion.cshtml
+++ b/codigo/GestionHotelera/Views/EmpresaHospedaje/AñadirTipoHabitacion.cshtml
@@ -29,7 +29,7 @@
             <label><strong>Tipo de cama:</strong></label>
             @* <input type="text" placeholder="Ej: Cama King" class="form-control" style="width: 50%; padding: 10px; margin-top: 5px;" /> *@
 
-            <select id="tipoCama" name="TipoCama" >
+            <select id="tipoCama" name="TipoCama" required>
                 <option value="" disabled selected>Seleccione un tipo de cama</option>
                 @foreach (var tipo in Model.ListaTiposDeCamas)
                 {
